Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,131 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: "Introduction to Kairos Terminal"
+description: "Kairos Terminal - The Intelligence Layer Between Onchain & Offchain"
 ---
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
+  src="/images/kairos-light.svg"
+  alt="Kairos Terminal Light"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
+  src="/images/kairos-dark.svg"
+  alt="Kairos Terminal Dark"
 />
 
-## Setting up
+## aka Bloomberg Of DeFi
 
-The first step to world-class documentation is setting up your editing environments.
+Kairos Terminal is revolutionizing cryptocurrency trading by bridging on-chain and off-chain data through advanced AI technology. At the heart of our platform lies ALINA, our proprietary AI system that powers unparalleled market insights.
+
+<Card title="Powered by ALINA" icon="robot" href="/alina">
+  ALINA (Algorithmic Learning and Integrated Network Analytics) is the advanced AI system that drives Kairos Terminal's powerful features and insights.
+</Card>
+
+## Core Philosophy: Where Attention Goes, Money Flows
+
+Our core philosophy is simple yet powerful: **Where attention goes, money flows**. We simply follow where the attention shares are shifting and whether the money is flowing in that direction or not. ALINA turns this principle into actionable insights by:
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
+  <Card title="Real-time Analysis" icon="bolt">
+    Processing vast amounts of data from social media, news, and on-chain sources in real-time.
   </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
+  <Card title="Predictive Power" icon="crystal-ball">
+    Using advanced algorithms to forecast trends and identify opportunities before they pick up steam.
   </Card>
 </CardGroup>
 
-## Make it yours
+## Key Modules of Kairos Terminal
 
-Update your docs to your brand and add valuable content for the best user conversion.
+<CardGroup cols={3}>
+  <Card
+    title="Emerging Trends"
+    icon="chart-line"
+    href="/features/emerging-trends"
+  >
+    AI-identified market trends and movements
+  </Card>
+  <Card
+    title="Sentiment Pulse"
+    icon="heart-pulse"
+    href="/features/sentiment-pulse"
+  >
+    Real-time sentiment analysis across platforms
+  </Card>
+  <Card
+    title="Cross-chain Insights"
+    icon="link"
+    href="/features/cross-chain-trading"
+  >
+    Comprehensive analysis across multiple blockchains
+  </Card>
+  <Card
+    title="Gasless Trading"
+    icon="gas-pump"
+    href="/features/gasless-trading"
+  >
+    AI-optimized trading to reduce or eliminate gas fees
+  </Card>
+  <Card
+    title="On-chain Alpha"
+    icon="magnifying-glass-chart"
+    href="/advanced-tools/on-chain-alpha-tracker"
+  >
+    AI-powered identification of "smart money" movements
+  </Card>
+  <Card
+    title="Smart Following"
+    icon="users"
+    href="/advanced-tools/smart-following"
+  >
+    AI-curated insights from successful traders and projects
+  </Card>
+</CardGroup>
+
+## The Power of ALINA
+
+ALINA's two core components work in harmony to provide unmatched trading intelligence:
+
+<CardGroup cols={2}>
+  <Card title="NEXUS" icon="network-wired">
+    Neural eXtraction and Understanding System - Processes and analyzes vast amounts of data.
+  </Card>
+  <Card title="ORACLE" icon="crystal-ball">
+    Optimized Recognition and Crypto Landscape Evaluator - Generates predictive insights and identifies opportunities.
+  </Card>
+</CardGroup>
+
+<Card title="Learn More About ALINA" icon="circle-info" href="/alina">
+  Dive deeper into how ALINA's AI capabilities drive Kairos Terminal's features and give you a competitive edge in crypto trading.
+</Card>
+
+## Get Started with AI-Powered Trading
+
+Ready to experience the future of AI-driven crypto trading?
+
+<Card
+  title="Join the Waitlist"
+  icon="rocket"
+  href="https://kairosterminal.com/waitlist"
+>
+  Be among the first to access Kairos Terminal's AI-powered trading platform
+</Card>
+
+## Explore Further
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="KAIROS Token"
+    icon="coin"
+    href="/kairos-token/token-utility"
   >
-    Customize your docs to your company's colors and brands
+    Learn about our AI-enhanced token ecosystem
   </Card>
   <Card
-    title="Reference APIs"
+    title="Developer Resources"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="/developers/api-documentation"
   >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+    Integrate ALINA's power into your own applications
   </Card>
 </CardGroup>
