Documentation edits made through Mintlify web editor

--- a/waitlist.mdx
+++ b/waitlist.mdx
@@ -10,7 +10,7 @@ description: "Kairos Terminal is currently in a closed beta phase. Be among the 
 
 <Steps>
   <Step title="Visit our Waitlist Page">
-    Go to [app.kairosterminal.com/](https://app.kairosterminal.com/)
+    Go to [app.kairosterminal.ai/](https://app.kairosterminal.ai/)
   </Step>
   <Step title="Complete The Tasks">
     Provide your wallet address & link your X(Twitter) and any other required information.
@@ -28,7 +28,7 @@ description: "Kairos Terminal is currently in a closed beta phase. Be among the 
 </Note>
 
 <Button
-  href="https://app.kairosterminal.com/"
+  href="https://app.kairosterminal.ai/"
   variant="primary"
 >
   Join the Waitlist Now
