Documentation edits made through Mintlify web editor

--- a/welcome.mdx
+++ b/welcome.mdx
@@ -6,9 +6,9 @@ description: "The Intelligence Layer Between Onchain & Offchain"
 
 Kairos Terminal aims to be the go-to platform for comprehensive crypto market intelligence and trading.
 
-## The Problem We Solve
+## The Problem
 
-<Card title="The DeFi Information Paradox" icon="circle-info">
+<Card title="The Information Paradox" icon="circle-info">
   While blockchain technology aims to distribute power, crucial market-moving information often resides in centralized, closed channels. Despite on-chain transparency, the context and motivations behind movements remain hidden.
 </Card>
 
