Documentation edits made through Mintlify web editor

--- a/core-philosophy.mdx
+++ b/core-philosophy.mdx
@@ -27,9 +27,9 @@ Unlike traditional finance, where information flows through public channels, DeF
     Process market chatter and track narrative shifts as they happen.
   </Step>
   <Step title="Flow Correlation">
-    Monitor where money flows in relation to attention shifts.
+    Monitor where money flows in relation to attention shifts, not just limited to event triggers of social events but onchain events as well.
   </Step>
   <Step title="Predictive Insights">
-    Identify emerging opportunities before they become mainstream.
+    Identify emerging opportunities before they become mainstream across the onchain and offchain realms.
   </Step>
 </Steps>
