--- a/what-is-alina.mdx
+++ b/what-is-alina.mdx
@@ -1,47 +1,62 @@
 ---
 title: "What is ALINA?"
-description: "Understanding the heart of Kairos Terminal"
+description: "Meet ALINA - The AI Core of Kairos Terminal"
 ---
-ALINA (Algorithmic Learning and Integrated Network Analytics) is the advanced AI system that powers Kairos Terminal. It's designed to process vast amounts of data from various sources to provide actionable insights for crypto traders.
 
-Long story short, it connects all the scattered dots which might be imperceptible to human eye
+# ALINA: Our AI Powerhouse
 
-<Card title="ALINA: Your AI Trading Assistant" icon="robot">
-  ALINA combines cutting-edge machine learning algorithms with comprehensive market data to give you a significant edge in crypto trading.
-</Card>
+ALINA (Algorithmic Learning and Integrated Network Analytics) is the bridge and heart of Kairos Terminal, processing vast amounts of data to provide actionable insights.
 
-## Key Capabilities of ALINA
+## Core Components
 
 <CardGroup cols={2}>
-  <Card title="Data Processing" icon="microchip">
-    Analyzes terabytes of data from social media, news sources, and blockchain networks in real-time.
+  <Card title="NEXUS" icon="network-wired">
+    Neural eXtraction and Understanding System
+    - Data preprocessing
+    - Entity extraction
+    - Contextual understanding
   </Card>
-  <Card title="Pattern Recognition" icon="chart-line">
-    Identifies complex patterns and correlations across multiple data sources and timeframes.
-  </Card>
-  <Card title="Sentiment Analysis" icon="face-smile">
-    Gauges market sentiment by analyzing social media posts, news articles, and on-chain metrics.
-  </Card>
-  <Card title="Predictive Analytics" icon="crystal-ball">
-    Generates forecasts and insights based on historical data and current market conditions.
+  <Card title="ORACLE" icon="crystal-ball">
+    Optimized Recognition and Crypto Landscape Evaluator
+    - Pattern recognition
+    - Trend forecasting
+    - Risk evaluation
   </Card>
 </CardGroup>
 
-## How ALINA Stands Out
+## Capabilities
 
-<CardGroup cols={2}>
-  <Card title="Cross-Chain Intelligence" icon="link">
-    ALINA analyzes data across multiple blockchain networks for a holistic view of the crypto ecosystem.
-  </Card>
-  <Card title="Adaptive Learning" icon="brain">
-    Continuously improves its models based on new data and market outcomes.
-  </Card>
-  <Card title="Explainable AI" icon="chalkboard-user">
-    Provides clear explanations for its insights, helping you understand the reasoning behind its predictions.
-  </Card>
-  <Card title="Real-Time Processing" icon="bolt">
-    Delivers insights and alerts in real-time, allowing you to act swiftly on emerging opportunities.
-  </Card>
-</CardGroup>
+<AccordionGroup>
+  <Accordion title="Real-time Market Intelligence">
+    - Live dashboards of market sentiment
+    - Emerging trend detection
+    - Sudden shift alerts
+  </Accordion>
+  <Accordion title="Trading Signals">
+    - Buy/sell signals based on multiple factors
+    - Risk assessment
+    - Personalized recommendations
+  </Accordion>
+  <Accordion title="Project Evaluation">
+    - Community sentiment analysis
+    - Team credibility assessment
+    - Technical analysis
+  </Accordion>
+</AccordionGroup>
 
-Learn more about how ALINA works and powers Kairos Terminal in the following sections.
+## Data Processing Pipeline
+
+<Steps>
+  <Step title="Data Collection">
+    Gather data from social media, news, blockchain, and other sources
+  </Step>
+  <Step title="Processing">
+    Clean and analyze data through NEXUS
+  </Step>
+  <Step title="Analysis">
+    Generate insights through ORACLE
+  </Step>
+  <Step title="Distribution">
+    Deliver actionable intelligence to users
+  </Step>
+</Steps>
