Documentation edits made through Mintlify web editor

--- a/ai-market.mdx
+++ b/ai-market.mdx
@@ -1,57 +1,158 @@
 ---
-title: "AI-Powered Market Insights"
-description: "Understanding How ALINA Drives Market Intelligence"
+title: "How ALINA Powers Kairos Terminal"
+description: "Discover how ALINA's AI capabilities drive each feature of Kairos Terminal"
 ---
 
-# AI-Powered Market Insights
+# ALINA in Action
 
-Leverage ALINA's advanced capabilities to understand market dynamics and identify opportunities.
+Witness how ALINA's advanced AI capabilities transform raw data into actionable trading intelligence across Kairos Terminal's key features.
 
-## Key Intelligence Features
+## Market Intelligence Engine
 
 <CardGroup cols={2}>
-  <Card title="Trend Detection" icon="chart-line">
-    - Identify emerging narratives
-    - Track sentiment shifts
-    - Monitor adoption patterns
+  <Card title="Trend Detection" icon="binoculars">
+    **Predictive Analysis**
+    - Processes 10,000+ data points in real-time
+    - Identifies patterns before they become trends
+    - Butterfly Effect Detection for early signals
+    - Black Swan event anticipation
   </Card>
-  <Card title="Smart Analysis" icon="brain">
-    - Cross-platform data correlation
-    - Pattern recognition
-    - Anomaly detection
+  <Card title="Smart Filtering" icon="filter">
+    **Noise Reduction**
+    - Filters out market noise and false signals
+    - Validates trends across multiple sources
+    - Weighs source credibility dynamically
+    - Identifies genuine market movements
   </Card>
 </CardGroup>
 
-## Real-time Processing
+## Real-World Applications
+
+<AccordionGroup>
+  <Accordion title="Social Sentiment Analysis">
+    - Real-time monitoring of 100+ crypto communities
+    - Sentiment weight adjustment based on source influence
+    - Detection of coordinated social activities
+    - Early warning system for sentiment shifts
+  </Accordion>
+  <Accordion title="On-Chain Analytics">
+    - Multi-chain transaction pattern analysis
+    - Whale wallet behavior monitoring
+    - Smart contract interaction tracking
+    - Cross-chain fund flow analysis
+  </Accordion>
+  <Accordion title="Market Impact Assessment">
+    - Price impact prediction for large movements
+    - Liquidity depth analysis across exchanges
+    - Slippage optimization recommendations
+    - Market manipulation detection
+  </Accordion>
+</AccordionGroup>
+
+## Feature Enhancement
 
 <Steps>
-  <Step title="Data Ingestion">
-    Continuous collection from multiple sources
+  <Step title="Data Aggregation & Processing">
+    ALINA aggregates data from multiple sources and preprocesses it through NEXUS for clean, standardized information flow.
+    
+    <Note>
+      Processing over 1M data points daily across social media, news, and blockchain networks.
+    </Note>
   </Step>
-  <Step title="Analysis">
-    AI-powered processing and correlation
-  </Step>
+  
   <Step title="Pattern Recognition">
-    Identify significant trends and movements
+    ORACLE analyzes processed data to identify significant patterns and potential opportunities.
+    
+    <Warning>
+      Patterns are continuously validated against historical data for accuracy.
+    </Warning>
   </Step>
-  <Step title="Alert Generation">
-    Real-time notifications of important events
+  
+  <Step title="Predictive Analytics">
+    Advanced machine learning models generate predictions and risk assessments.
+    
+    <Tip>
+      Predictions are provided with confidence scores to aid decision-making.
+    </Tip>
+  </Step>
+  
+  <Step title="Real-time Alerts">
+    Users receive instant notifications about significant market events and opportunities.
   </Step>
 </Steps>
 
-## Intelligence Categories
+## Practical Trading Intelligence
 
-<AccordionGroup>
-  <Accordion title="Market Sentiment">
-    Comprehensive analysis of market mood and shifts
-  </Accordion>
-  <Accordion title="On-chain Analysis">
-    Deep insights into blockchain activity
-  </Accordion>
-  <Accordion title="Social Signals">
-    Track and analyze social media trends
-  </Accordion>
-  <Accordion title="Narrative Tracking">
-    Monitor and predict market narratives
-  </Accordion>
-</AccordionGroup>
+<CardGroup cols={3}>
+  <Card title="Market Entry" icon="door-open">
+    - Optimal entry point suggestions
+    - Volume profile analysis
+    - Liquidity pool assessment
+    - Slippage predictions
+  </Card>
+  <Card title="Risk Management" icon="shield">
+    - Real-time risk scoring
+    - Exposure analysis
+    - Volatility forecasting
+    - Correlation warnings
+  </Card>
+  <Card title="Exit Strategy" icon="door-closed">
+    - Profit target recommendations
+    - Stop-loss optimization
+    - Market timing signals
+    - Liquidation risk alerts
+  </Card>
+</CardGroup>
+
+## Cross-Chain Intelligence
+
+<CodeBlock language="json">
+{`
+{
+  "cross_chain_analysis": {
+    "ethereum": {
+      "sentiment": "bullish",
+      "volume_profile": "accumulation",
+      "whale_activity": "increasing"
+    },
+    "correlations": {
+      "layer2s": "strong_positive",
+      "defi_tokens": "moderate_positive"
+    },
+    "risk_score": 7.5,
+    "opportunity_alert": "high_probability"
+  }
+}
+`}
+</CodeBlock>
+
+## Continuous Enhancement
+
+<CardGroup cols={2}>
+  <Card title="Learning System" icon="graduation-cap">
+    - Self-improving prediction models
+    - Adaptive weight adjustment
+    - Performance tracking
+    - Feedback incorporation
+  </Card>
+  <Card title="Accuracy Metrics" icon="bullseye">
+    - Prediction success rate tracking
+    - Signal validation system
+    - False positive reduction
+    - Confidence scoring
+  </Card>
+</CardGroup>
+
+<Note>
+  ALINA's capabilities are continuously evolving, with new features and improvements being added based on market needs and user feedback.
+</Note>
+
+## Experience AI-Powered Trading
+
+<Card
+  title="Join Our Waitlist"
+  icon="rocket"
+  href="https://kairosterminal.ai/waitlist"
+>
+  Get early access to ALINA's advanced trading intelligence and stay ahead of the market.
+</Card>
