Documentation edits made through Mintlify web editor

--- a/social-onchain-alpha.mdx
+++ b/social-onchain-alpha.mdx
@@ -1,50 +1,54 @@
 ---
 title: "Social-Onchain Alpha"
-description: "Correlate social narratives with on-chain activities for deeper insights"
+description: "Connect Social Signals with On-chain Activities"
 ---
 
-# Social-Onchain Alpha
-
-Social-Onchain Alpha is a unique feature that correlates social media trends with on-chain activities, providing you with deeper insights into market movements and potential opportunities.
-
-<Card title="Bridging Social and On-Chain Data" icon="bridge">
-  Uncover hidden patterns and insights by connecting what people are saying with what they're actually doing on the blockchain.
+<Card title="Correlation Engine" icon="link">
+  Bridge the gap between social media trends and actual blockchain activities to discover real alpha.
 </Card>
 
-## Key Components
+## Feature Overview
 
 <CardGroup cols={2}>
-  <Card title="Social Trend Analysis" icon="hashtag">
-    Track and analyze trending topics, hashtags, and discussions across major social platforms.
+  <Card title="Social Intelligence" icon="messages">
+    - Community engagement tracking
+    - Influencer activity monitoring
+    - Content sentiment analysis
+    - Trend identification
   </Card>
-  <Card title="On-Chain Activity Monitoring" icon="link">
-    Monitor transactions, smart contract interactions, and other on-chain metrics across multiple networks.
-  </Card>
-  <Card title="Correlation Engine" icon="code-branch">
-    Advanced algorithms that identify connections between social trends and on-chain activities.
-  </Card>
-  <Card title="Alpha Alerts" icon="bell">
-    Receive notifications when significant correlations are detected, indicating potential alpha.
+  <Card title="On-chain Verification" icon="blockchain">
+    - Transaction analysis
+    - Smart contract interactions
+    - Wallet behavior patterns
+    - Token movements
   </Card>
 </CardGroup>
 
-## Benefits of Social-Onchain Alpha
 
-<CardGroup cols={2}>
-  <Card title="Early Opportunity Detection" icon="lightbulb">
-    Spot potential opportunities before they become widely known.
-  </Card>
-  <Card title="Reduced False Signals" icon="filter-circle-xmark">
-    By correlating social and on-chain data, filter out noise and focus on validated trends.
-  </Card>
-  <Card title="Deep Market Insights" icon="magnifying-glass-chart">
-    Gain a more comprehensive understanding of market dynamics and investor behavior.
-  </Card>
-  <Card title="Enhanced Due Diligence" icon="file-certificate">
-    Use correlated data to perform more thorough research on potential investments.
-  </Card>
-</CardGroup>
+## Sample Alpha Signal
 
-<Note>
-  While Social-Onchain Alpha provides valuable insights, always conduct your own research and consider your risk tolerance before making investment decisions.
-</Note>
+<CodeBlock language="json">
+{`
+{
+  "alpha_signal": {
+    "confidence": 85,
+    "social_metrics": {
+      "mention_growth": "+300%",
+      "sentiment": "Highly Positive",
+      "influencer_engagement": true
+    },
+    "onchain_validation": {
+      "whale_accumulation": true,
+      "smart_money_flow": "Incoming",
+      "holder_growth": "+25%"
+    },
+    "correlation_score": 0.82,
+    "opportunity_type": "Accumulation"
+  }
+}
+`}
+</CodeBlock>
+
+<Warning>
+  Public demo provides access to basic correlation features. Advanced pattern recognition and custom alerts available in private access.
+</Warning>
