Documentation edits made through Mintlify web editor

--- a/ai-market.mdx
+++ b/ai-market.mdx
@@ -152,7 +152,7 @@ Witness how ALINA's advanced AI capabilities transform raw data into actionable 
 <Card
   title="Join Our Waitlist"
   icon="rocket"
-  href="https://kairosterminal.ai/waitlist"
+  href="https://app.kairosterminal.ai/"
 >
   Get early access to ALINA's advanced trading intelligence and stay ahead of the market.
 </Card>
