Documentation edits made through Mintlify web editor

--- a/platform-features.mdx
+++ b/platform-features.mdx
@@ -60,7 +60,7 @@ description: "Explore Kairos Terminal's Available Features and Capabilities"
 <Card
   title="Apply for Private Demo"
   icon="lock-open"
-  href="https://kairosterminal.ai/request-demo"
+  href="https://t.me/mitulbharti"
 >
   Experience our full suite of advanced features. Apply for private demo access today.
 </Card>
