Documentation edits made through Mintlify web editor

--- a/emergingtrends.mdx
+++ b/emergingtrends.mdx
@@ -6,13 +6,13 @@ description: "Early Detection of Market Trends and Movements"
 # Emerging Trends Detection
 
 <Card title="AI-Powered Trend Detection" icon="chart-line">
-  Stay ahead of the market with ALINA's advanced pattern recognition and trend analysis.
+  Get detailed analysis of events that happened as less than 10 minutes ago!
 </Card>
 
 ## Key Features
 
 <CardGroup cols={2}>
-  <Card title="Early Signal Detection" icon="antenna">
+  <Card title="Early Signal Detection" icon="question">
     - Social mention spikes
     - Volume anomalies
     - Wallet pattern changes
@@ -78,9 +78,7 @@ description: "Early Detection of Market Trends and Movements"
 
 ## Analysis Dashboard
 
-<Frame>
-  <img src="/images/emerging-trends-dashboard.svg" alt="Emerging Trends Dashboard" />
-</Frame>
+Public Beta Soon!
 
 
 <Note>
