--- a/sentiment-pulse.mdx
+++ b/sentiment-pulse.mdx
@@ -48,9 +48,7 @@ description: "Real-time Market Sentiment Analysis"
 
 ## Sentiment Dashboard
 
-<Frame>
-  <img src="/images/sentiment-dashboard.svg" alt="Sentiment Analysis Dashboard" />
-</Frame>
+Public Beta Soon!
 
 ## Sample Sentiment Data
 
