Documentation edits made through Mintlify web editor

--- a/social-onchain-alpha.mdx
+++ b/social-onchain-alpha.mdx
@@ -31,6 +31,9 @@ description: "Connect Social Signals with On-chain Activities"
 {`
 {
   "alpha_signal": {
+    "Ticker:" "$Trump"
+    "Network:" "SOL"
+    "CA:" "Fygid.....hehEU"
     "confidence": 85,
     "social_metrics": {
       "mention_growth": "+300%",
