Documentation edits made through Mintlify web editor

--- a/waitlist.mdx
+++ b/waitlist.mdx
@@ -1,10 +1,17 @@
 ---
-title: "Join Waitlist"
+title: "Join Public Waitlist"
 description: "Kairos Terminal is currently in a closed beta phase. Be among the first to experience our revolutionary trading platform by joining our waitlist."
 ---
+
+<Note>
+  Public waitlist is for everyone, we run a separate private exculisve waitlist providing strategic access, for exclusive waitlist and features contact [the team](https:/t.me/mitulbharti)
+</Note>
+
 <Card title="Exclusive Access" icon="star">
   Waitlist members will get priority access when we launch and exclusive insights into our development process.
 </Card>
+
+
 
 ## How to Join
 
