Documentation edits made through Mintlify web editor

--- a/welcome.mdx
+++ b/welcome.mdx
@@ -1,27 +1,33 @@
 ---
-title: "Welcome to Kairos Terminal"
+title: "Welcome to ALINAintel"
 description: "The Intelligence Layer Between Onchain & Offchain"
 ---
-## The Bloomberg of DeFi
 
-Kairos Terminal aims to be the go-to platform for comprehensive crypto market intelligence and trading.
+## Mother of All Agents
+
+ALINA (Algorithmic Learning and Integrated Network Analytics) is revolutionizing crypto intelligence by democratizing access through a powerful chat interface. Where attention flows, money follows - and ALINA sees it all.
 
 ## The Problem
 
 <Card title="The Information Paradox" icon="circle-info">
-  While blockchain technology aims to distribute power, crucial market-moving information often resides in centralized, closed channels. Despite on-chain transparency, the context and motivations behind movements remain hidden.
+  While blockchain technology aims to distribute power, crucial market-moving information often resides in centralised, closed channels. Despite on-chain transparency & access to information users fail to take action since everything is bombarded with noise. ALINA helps you declutter and find the needle in the haystack.
 </Card>
 
 ## Our Solution
 
 <CardGroup cols={2}>
   <Card title="Information Bridge" icon="bridge">
-    Connect fragmented data across closed and open internet, social channels, and on-chain activities.
+    Connect fragmented data across closed and open internet, social channels, and on-chain activities - now accessible through simple chatGPT like panel.
   </Card>
-  <Card title="AI Analysis" icon="robot">
-    ALINA processes this data to provide actionable insights and identify trends before they go mainstream.
+
+  <Card title="Advanced LLM" icon="robot">
+    ALINA is not just limited as an AI Agent, the full system will contain of a custom built Intelligence LLM Model which can detect patterns and recommend course of actions, just like war simulations.
   </Card>
 </CardGroup>
+
+<Card title="Infrastructure Overview" icon="circle-info">
+  At this point of time ALINA can ingest and process upto 10,000 signals per minute from any possible data source, both onchain and offchain, this isnt limited by social chatter it could also process government policy changes and world macro economic activities.
+</Card>
 
 ## Key Modules
 
@@ -29,9 +35,11 @@ Kairos Terminal aims to be the go-to platform for comprehensive crypto market in
   <Card title="Market Intelligence" icon="chart-mixed">
     AI-identified trends and market movements with real-time analysis.
   </Card>
+
   <Card title="Sentiment Analysis" icon="heart-pulse">
     Monitor market mood across multiple platforms and sources.
   </Card>
+
   <Card title="Alpha Discovery" icon="magnifying-glass-dollar">
     Correlate social signals with on-chain activities to uncover opportunities.
   </Card>
@@ -43,6 +51,7 @@ Kairos Terminal aims to be the go-to platform for comprehensive crypto market in
   <Card title="Cross-chain Trading" icon="link">
     Coming Soon: Seamless trading across multiple blockchain networks.
   </Card>
+
   <Card title="Gasless Trading" icon="gas-pump">
     Coming Soon: Trade with reduced or eliminated gas fees.
   </Card>
@@ -50,12 +59,8 @@ Kairos Terminal aims to be the go-to platform for comprehensive crypto market in
 
 ## Experience The Future
 
-Ready to revolutionize your crypto trading experience?
+Ready to revolutionise your crypto trading experience?
 
-<Card
-  title="Join Our Waitlist"
-  icon="rocket"
-  href="https://kairosterminal.ai/waitlist"
->
-  Be among the first to access Kairos Terminal's powerful features.
+<Card title="Join Our Waitlist" icon="rocket" href="https://ALINAintel.ai">
+  Be among the first to access ALINAintel's revolutionary features.
 </Card>
